[gd_scene load_steps=16 format=3 uid="uid://dfjtwvw3b8x8s"]

[ext_resource type="PackedScene" uid="uid://ca7vc7rpbqikh" path="res://Player.tscn" id="1_ifff7"]
[ext_resource type="Script" path="res://scripts/main_3d.gd" id="1_wao54"]
[ext_resource type="PackedScene" uid="uid://crri06jkingmg" path="res://Planet.tscn" id="2_q31yk"]
[ext_resource type="PackedScene" uid="uid://cvh1maum3hk8" path="res://Astroid.tscn" id="3_0wttf"]
[ext_resource type="Script" path="res://restart_game.gd" id="5_vxv1v"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_kg8q8"]

[sub_resource type="Sky" id="Sky_olvsu"]
sky_material = SubResource("ProceduralSkyMaterial_kg8q8")

[sub_resource type="Environment" id="Environment_4jkfr"]
background_mode = 2
sky = SubResource("Sky_olvsu")
sky_rotation = Vector3(0, 1.5708, -1.5708)
tonemap_mode = 2
glow_enabled = true

[sub_resource type="Gradient" id="Gradient_gbnwk"]
offsets = PackedFloat32Array(0.158683, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_k0y17"]
frequency = 0.0417

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_gctbd"]
color_ramp = SubResource("Gradient_gbnwk")
noise = SubResource("FastNoiseLite_k0y17")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tl2bd"]
albedo_texture = SubResource("NoiseTexture2D_gctbd")

[sub_resource type="PlaneMesh" id="PlaneMesh_0ilb1"]
material = SubResource("StandardMaterial3D_tl2bd")

[sub_resource type="Curve3D" id="Curve3D_wlkgi"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -141.421, 0.165741, -208.995, 0, 0, 0, 0, 0, 0, -145.611, -0.0641479, 79.7262, 0, 0, 0, 0, 0, 0, 338.837, -0.0641174, 82.7035, 0, 0, 0, 0, 0, 0, 334.571, 0.165833, -206.07, 0, 0, 0, 0, 0, 0, -141.421, 0.165741, -208.995),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="LabelSettings" id="LabelSettings_uolxi"]
font_size = 48
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[node name="Root" type="Node3D"]
script = ExtResource("1_wao54")
astroid_scene = ExtResource("3_0wttf")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 90.6505, 101.778, -69.0317)
projection = 1
size = 200.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4jkfr")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.182468, -0.636054, 0.74976, 0.976876, 0.0308468, -0.211571, 0.111443, 0.771027, 0.626975, 0, 9.7668, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_ifff7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -68.9651, 0, -71.239)

[node name="Planet" parent="." instance=ExtResource("2_q31yk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -10)

[node name="Planet2" parent="." instance=ExtResource("2_q31yk")]
transform = Transform3D(3.375, 0, 0, 0, 3.375, 0, 0, 0, 3.375, -10, 0, -10)

[node name="Planet3" parent="." instance=ExtResource("2_q31yk")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 86.9511, 0, -73.3281)

[node name="Planet4" parent="." instance=ExtResource("2_q31yk")]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 204.722, 0, -69.5293)
IS_DANGER = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(10000, 0, 0, 0, 10000, 0, 0, 0, 10000, 0.755829, -9.99919, -0.0176315)
mesh = SubResource("PlaneMesh_0ilb1")

[node name="AstroidTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_wlkgi")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-0.999895, -1.15527e-05, 0.0145107, 0, 1, 0.000796147, -0.0145108, 0.000796064, -0.999894, -141.421, 0.165741, -208.995)

[node name="Button" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -86.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Restart (r)"
script = ExtResource("5_vxv1v")

[node name="WinLoseUI" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="Control" parent="WinLoseUI"]
layout_mode = 2

[node name="WinLoseLabel" type="Label" parent="WinLoseUI/Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_uolxi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="WinLoseUI/Container"]
visible = false
layout_mode = 2
offset_left = -46.0
offset_top = 77.0
offset_right = 40.0
offset_bottom = 108.0
text = "Restart (r)
"
script = ExtResource("5_vxv1v")

[node name="NextLevelButton" type="Button" parent="WinLoseUI/Container"]
visible = false
layout_mode = 2
offset_left = -57.0
offset_top = 76.0
offset_right = 52.0
offset_bottom = 107.0
text = "Next level (e)"

[connection signal="timeout" from="AstroidTimer" to="." method="_on_astroid_timer_timeout"]
